--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.lukweb</groupId>
-    <artifactId>just-mail</artifactId>
+    <artifactId>JustMail</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
